[project]
name = "receipt-analysis-lda"
version = "0.1.0"
description = "レシートデータのLDAトピック分析デモ"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=25.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "wordcloud>=1.9.6",
]
